--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^4.4.6",
     "express": "^4.18.2",
     "ng2-charts": "^6.0.1",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
     "three": "^0.171.0",
     "tslib": "^2.3.0",
@@ -40,6 +41,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "@types/three": "^0.171.0",
+    "dotenv-webpack": "^8.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
